--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ a {
 
 <body>
 	<div class="wrap">
-	  <a href="/ElectryCraft.exe" class="btn1">Descargar Instalador</a>
+	  <a href="https://github.com/mario638/ElectryCraft/raw/main/ElectryCraft.exe" class="btn1">Descargar Instalador</a>
 	
 
 
@@ -94,6 +94,6 @@ a {
 
 	</div>
 </body>
-<meta http-equiv=”Refresh” content=”0;URL=https://electrycraft.ddns.net:25409”/>
+<meta http-equiv=”Refresh” content=”0;URL=https://electrycraft.es”/>
 </html> 
 
