--- a/index.html
+++ b/index.html
@@ -94,6 +94,6 @@ a {
 
 	</div>
 </body>
-<meta http-equiv=”Refresh” content=”0;URL=https://mario638.github.io/ElectryCraft/index.html”/>
+<meta http-equiv=”Refresh” content=”0;URL=https://electrycraft.es>
 </html> 
 
