--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@ a {
 
 <head>
   <title>Instalador de ElectryCraft</title>
+  <link rel="icon" type="image/x-icon" href="/favicon.png">
 </head>
 
 <body>
