--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ a {
 
 <head>
   <title>Instalador de ElectryCraft</title>
-  <link rel="icon" type="image/x-icon" href="./favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://electrycraft.es/favicon.ico">
 </head>
 
 <body>
